# computational-physics-2

./: README.md  echo.txt.asc
homework/: homework1-p1.ipynb  homework1-p2.ipynb
unit-1/: 101-ODE-ordinary-differential-equations.ipynb  102-ODE-Euler-methods.ipynb  103-ODE-slopes.ipynb  104-ODE-order-reduction.ipynb  105-ODE-predictor-corrector-methods.ipynb  106-ODE-RK-methods.ipynb  107-ODE-scipy-solvers.ipynb  108-ODE-boundary-value-problems.ipynb  109-ODE-boundary-value-finite-differences.ipynb  110-problem-ODE-BVproblem.ipynb
unit-2/: 201-python-classes.ipynb  202-examples-python-classes.ipynb  203-python-scripts.ipynb  204-IO-python-classes.ipynb  205-standalone-modules.ipynb  206-python-packaging.ipynb  207-timing-code.ipynb  207-timing-testing.ipynb  208-OOP-python.ipynb  208-testing-code.ipynb  209-testing-code.ipynb  first_file.ini  fruit.py  mandelbrot_class.py  particle.py  second_script.py  selected_items.csv  selected_items2.csv  test_class.py  test_math.py  third_script.py  wihtout_v.txt  with_v.txt
unit-2/mymodule/: pyproject.toml
unit-2/mymodule/mymodule/: mandel.py  mandel3.py
unit-2/py_scripts/: custom_folders.py  first_script.py  greeting.py  prog.py  prog2.py
unit-2/stamodule/stamodule.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
unit-2/student/: student.py  test_student.py
unit-3/: 301-SSH-key-generation.ipynb  302-HPC-computing.ipynb  303-job-submission-slurm.ipynb  304-parallel-computing.ipynb  305-python-multiprocessing.ipynb  306-python-joblib.ipynb  random_square.py
